--- a/vkefu/src/main/resources/static/chat.html
+++ b/vkefu/src/main/resources/static/chat.html
@@ -3,12 +3,13 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <head>
     <title>devsq聊天室</title>
-    <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!--<link href="/v6/main.css" rel="stylesheet">-->
     <link href="./css/main.css" rel="stylesheet">
     <!--<script src="/webjars/jquery/jquery.min.js"></script>
     <script src="/webjars/sockjs-client/sockjs.min.js"></script>
     <script src="/webjars/stomp-websocket/stomp.min.js"></script>-->
+    <script src="/webjars/jquery/jquery.min.js"></script>
     <script src="./js/socket.io.js"></script>
     <script src="./js/webIM.js"></script>
    <!-- <script src="/v6/app.js"></script>-->
