--- a/vkefu/src/main/resources/static/reindex.html
+++ b/vkefu/src/main/resources/static/reindex.html
@@ -4,7 +4,7 @@
 <head>
     <title>Hello WebSocket</title>
     <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
+    <link href="./css/main.css" rel="stylesheet">
     <script src="/webjars/jquery/jquery.min.js"></script>
 </head>
 <body>
@@ -12,11 +12,11 @@
 <div id="main-content" class="container">
     <div class="row">
         <div class="col-md-6">
-           请重新登录
+            密码错误,请重新登录
         </div>
-        
+
         <div class="col-md-6">
-            <form class="form-inline" method='post'  action="/login">
+            <form class="form-inline" method='post'  action="/vkefu/user/login">
                 <div class="form-group">
                     <input type="text" name="username" class="form-control" placeholder="用户名">
                     <input type="password" name="pwd" class="form-control" placeholder="密码">
