--- a/vkefu/src/main/resources/static/chat.html
+++ b/vkefu/src/main/resources/static/chat.html
@@ -10,8 +10,8 @@
     <script src="/webjars/sockjs-client/sockjs.min.js"></script>
     <script src="/webjars/stomp-websocket/stomp.min.js"></script>-->
     <script src="/webjars/jquery/jquery.min.js"></script>
-    <script src="./js/socket.io.js"></script>
-    <script src="./js/webIM.js"></script>
+    <script src="js/plugin/socket.io.js"></script>
+    <script src="js/im/webIM.js"></script>
    <!-- <script src="/v6/app.js"></script>-->
 </head>
 <body>
